fix background color when screen overflows

--- a/public/css/4-sections/_home.sass
+++ b/public/css/4-sections/_home.sass
@@ -1,5 +1,5 @@
 .home-view
-	height: 100%
+	min-height: 100%
 	background: fade-out($light-black, .03)
 	color: white
 	display: flex
